# OshoosiClaw

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.root  LICENSE  README.md  SECURITY.md  build_hh.txt  check_bytes.ps1  harden_yara.ps1  harden_yara.py  osoosi.toml  osoosi.toml.example  package.bat  sanitize_yara.ps1  sanitize_yara.py
agent/: README.md  osoosi_tools.py  requirements.txt  run_agent.py
config/: config.xml  firewall_allowlist.txt  firewall_allowlist.txt.sign  openshell-policy.yaml  openshell-policy.yaml.sig  openshell-policy.yaml.sign  patch_logic_example.lua  software_replacement.txt  sysmon-immune-system.xml
crates/hex-patch/: Cargo.toml
crates/hex-patch/src/: main.rs
crates/osoosi-audit/: Cargo.toml
crates/osoosi-audit/src/: lib.rs  tpm.rs
crates/osoosi-behavioral/: Cargo.toml
crates/osoosi-behavioral/src/: analyzer.rs  classifier.rs  colog.rs  deception.rs  ebpf_monitor.rs  feedback.rs  forensics.rs  gemma.rs  lib.rs  llm_engine.rs  log_reader.rs  privacy_voter.rs  process_tree.rs  reasoning.rs  sentence.rs  smollm.rs  spider_eyes.rs  yara_analyzer.rs
crates/osoosi-cli/: Cargo.toml
crates/osoosi-cli/src/: main.rs
crates/osoosi-core/: Cargo.toml
crates/osoosi-core/src/: adaptive.rs  attack_graph.rs  backup.rs  baseline.rs  blocking_manager.rs  browser_guard.rs  byzantine.rs  canary.rs  capa_analyzer.rs  causal_ai.rs  config_integrity.rs  correlator.rs  firewall.rs  forensics.rs  gossip.rs  hardened.rs  hybrid_runtime.rs  landlock.rs  lib.rs  openshell.rs  otx_tarpit.rs  pii.rs  privilege.rs  quarantine.rs  relativistic.rs  remediation.rs  secured_executor.rs  self_healing.rs  shield.rs  software_replacement.rs  static_analyzer.rs  system_check.rs  tool_paths.rs  triage.rs  version_utils.rs  voters.rs  watchdog.rs  yara_gen.rs
crates/osoosi-dashboard/: Cargo.toml
crates/osoosi-dashboard/src/: lib.rs
crates/osoosi-dp/: Cargo.toml
crates/osoosi-dp/src/: homomorphic.rs  lib.rs  psi.rs
crates/osoosi-exporter/: Cargo.toml
crates/osoosi-exporter/src/: lib.rs
crates/osoosi-hexpatch/: Cargo.toml
crates/osoosi-hexpatch/src/: lib.rs
crates/osoosi-memory/: Cargo.toml
crates/osoosi-memory/src/: encryption.rs  lib.rs  memory_scanner.rs  scanner.rs
crates/osoosi-model/: Cargo.toml
crates/osoosi-model/examples/: yara_compile_check.rs
crates/osoosi-model/src/: lib.rs  malconv.rs  malware.rs  nsrl.rs  train.rs
crates/osoosi-model/yara-rules/: osoosi_behavioral.yar
crates/osoosi-policy/: Cargo.toml
crates/osoosi-policy/src/: admin.rs  engine.rs  feed.rs  graph.rs  lib.rs  otx_connection.rs  predictive.rs  semantic.rs  sigma.rs  traffic_adapter.rs  verified.rs  voters.rs
crates/osoosi-repair/: Cargo.toml
crates/osoosi-repair/src/: discovery.rs  jit.rs  lib.rs  patch_hash_store.rs  registry.rs  remediator.rs
crates/osoosi-runtime/: Cargo.toml
crates/osoosi-runtime/src/: deception.rs  honeytokens.rs  lib.rs  mitigations.rs  sleeper.rs  tarpit.rs
crates/osoosi-sandbox/: Cargo.toml
crates/osoosi-sandbox/src/: host_interface.rs  kill_switch.rs  lib.rs  memory_limiter.rs  native_host.rs  security.rs
crates/osoosi-sandbox/tests/: attack_isolation_test.rs
crates/osoosi-telemetry/: Cargo.toml
crates/osoosi-telemetry/src/: discovery.rs  file_watch.rs  hash.rs  host_events.rs  lib.rs  provisioning.rs  sysmon.rs
crates/osoosi-trust/: Cargo.toml
crates/osoosi-trust/src/: lib.rs
crates/osoosi-trust/tests/: trust_tests.rs
crates/osoosi-types/: Cargo.toml
crates/osoosi-types/src/: blocking.rs  config.rs  error.rs  executor.rs  holograph.rs  host_events.rs  (+6 more)
crates/osoosi-wire/: Cargo.toml
crates/osoosi-wire/src/: confidential.rs  ghost_node.rs  holograph.rs  join_gate.rs  lib.rs  mesh.rs  pqc.rs  tarpit.rs
crates/otx-taxii-rs/: Cargo.toml
crates/otx-taxii-rs/src/: lib.rs  main.rs
crates/test-peer/: Cargo.toml
crates/test-peer/src/: main.rs
dashboard/src/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  EDR_SENSOR_IMPLEMENTATION.md  architecture_and_innovation.md  operations_manual.md
scratch/: test_rand.rs
scripts/: build_bins.ps1  build_bins.sh  build_portable.ps1  export_securebert_onnx.py  firewall_setup.ps1  firewall_setup.sh  grant-sysmon-read.ps1  install-openshell-wsl.ps1  install-openshell.ps1  package.ps1  train_ember_distributed.py  train_malware_model.py  yara_plyara_rebuild.py
tools/openshell/: README.md
yara/osoosi_generated/: OsoosiGen_0056809c_c746_4ab3_a.yar  OsoosiGen_00b74515_8069_4b43_a.yar  OsoosiGen_014b2314_b2e5_48ce_8.yar  OsoosiGen_01f2af9e_e291_43e4_b.yar  OsoosiGen_021e3478_c53a_496e_b.yar  OsoosiGen_027b27ab_74f7_4539_a.yar  OsoosiGen_02c01339_3720_42a1_9.yar  OsoosiGen_0475ed74_ecf9_4e90_a.yar  OsoosiGen_052a0655_ce66_47f2_a.yar  OsoosiGen_0531292c_6383_497e_a.yar  OsoosiGen_068fb1e4_d7cc_49ca_a.yar  OsoosiGen_06cb7c26_eff6_4a1b_b.yar  OsoosiGen_0788ca72_496c_4d05_9.yar  OsoosiGen_07a2e84c_509c_4b38_b.yar  OsoosiGen_09474aac_1a26_48c4_b.yar  OsoosiGen_096e4c0c_9fa7_4831_9.yar  OsoosiGen_09c59aa5_f536_4c9f_9.yar  OsoosiGen_0a30e70b_70fe_4778_8.yar  OsoosiGen_0acd2225_d10e_4acc_9.yar  OsoosiGen_0af8fa04_66a4_4912_9.yar  OsoosiGen_0c393409_a0d6_4d4b_a.yar  OsoosiGen_0c6e549c_6724_44bd_a.yar  OsoosiGen_0e87efdc_3f95_4811_a.yar  OsoosiGen_0ee9e7aa_d22f_4c27_8.yar  OsoosiGen_0f480cfa_7f6a_4253_8.yar  OsoosiGen_0f7d15de_2add_49fe_b.yar  OsoosiGen_102df5be_58d3_4d58_b.yar  OsoosiGen_102fca3f_37b7_43af_b.yar  OsoosiGen_104776e1_e9e8_49b7_9.yar  OsoosiGen_109a3f78_ffd6_4fc5_9.yar  OsoosiGen_112f8d7c_0c9c_476c_8.yar  OsoosiGen_11470dd2_6ac6_4347_8.yar  OsoosiGen_11982fad_87b1_4294_b.yar  OsoosiGen_125b408a_fa9d_49ee_b.yar  OsoosiGen_134991f9_03a8_4b64_a.yar  OsoosiGen_134e126c_25f3_417a_a.yar  OsoosiGen_1404b3cb_88bf_45f4_8.yar  OsoosiGen_1431773c_9517_4c24_b.yar  OsoosiGen_14b3cbb8_ebfe_4e26_b.yar  OsoosiGen_1532d4c8_a53d_4cb8_8.yar  (+396 more)
yara/rules/: antidebug_antivm_index.yar  capabilities_index.yar  crypto_index.yar  cve_rules_index.yar  email_index.yar  exploit_kits_index.yar  index.yar  maldocs_index.yar  malware_index.yar  packers_index.yar  webshells_index.yar
(+100 files in other folders)
