[package]
name = "osoosi-behavioral"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Behavioral detection from system/application logs using SecureBERT-style analysis"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-telemetry = { path = "../osoosi-telemetry" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
hostname = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ort = { workspace = true }
tokenizers = "0.15"
rusqlite = { workspace = true }
ndarray = "0.16"
reqwest = { workspace = true, features = ["json"] }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
rand = { workspace = true }

