[package]
name = "osoosi-behavioral"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Behavioral detection from system/application logs using SecureBERT-style analysis"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-telemetry = { path = "../osoosi-telemetry" }
osoosi-dp = { path = "../osoosi-dp" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
hostname = { workspace = true }
tokio = { workspace = true, features = ["full"] }
ort = { workspace = true }
tokenizers = "0.15"
rusqlite = { workspace = true }
ndarray = "0.16"
reqwest = { workspace = true, features = ["json"] }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
yara-x = { workspace = true }
walkdir = { workspace = true }
hayabusa = { workspace = true }
chainsaw = { workspace = true }
proc-maps = { workspace = true }
capstone = { workspace = true }
sysinfo = { workspace = true }
winapi = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
redbpf = { workspace = true }

