[package]
name = "osoosi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for OpenỌ̀ṣọ́ọ̀sì Agentic EDR"

[[bin]]
name = "osoosi"
path = "src/main.rs"

[dependencies]
osoosi-core = { path = "../osoosi-core" }
osoosi-memory = { path = "../osoosi-memory" }
osoosi-dashboard = { path = "../osoosi-dashboard" }
osoosi-types = { path = "../osoosi-types" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
osoosi-telemetry = { path = "../osoosi-telemetry" }
uuid = { workspace = true }
anyhow = { workspace = true }
ort = { workspace = true }
osoosi-policy = { path = "../osoosi-policy" }
reqwest = { workspace = true, features = ["json"] }
zip = { workspace = true }
flate2 = "1.0"
tar = "0.4"
webbrowser = "1"
libloading = { workspace = true }
hf-hub = { workspace = true }
osoosi-exporter = { path = "../osoosi-exporter" }
