[package]
name = "osoosi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core Agentic EDR Orchestration for OpenỌ̀ṣọ́ọ̀sì"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-telemetry = { path = "../osoosi-telemetry" }
osoosi-policy = { path = "../osoosi-policy" }
osoosi-memory = { path = "../osoosi-memory" }
osoosi-wire = { path = "../osoosi-wire" }
osoosi-runtime = { path = "../osoosi-runtime" }
osoosi-audit = { path = "../osoosi-audit" }
osoosi-trust = { path = "../osoosi-trust" }
osoosi-repair = { path = "../osoosi-repair" }
osoosi-model = { path = "../osoosi-model" }
osoosi-sandbox = { path = "../osoosi-sandbox" }
osoosi-behavioral = { path = "../osoosi-behavioral" }
osoosi-dp = { path = "../osoosi-dp" }
ed25519-dalek = { workspace = true }
sysinfo = { workspace = true }
tfhe = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
magika = { workspace = true }
yara-x = { workspace = true }
ort = { version = "=2.0.0-rc.10", features = ["load-dynamic"] }
ndarray = "0.15"
tokenizers = "0.19.1"
hf-hub = "0.3.2"
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
async-trait = "0.1"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
hostname = { workspace = true }
rayon = { workspace = true }

uuid = { workspace = true, features = ["v4", "serde"] }
dirs = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
win32-version-info = "0.3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
