[package]
name = "osoosi-dp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Differential Privacy (DP) Utility for OpenỌ̀ṣọ́ọ̀sì"

[dependencies]
rand = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
