[package]
name = "osoosi-hexpatch"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-OS hex patching with Lua script logic"

[dependencies]
rhai = { version = "1.18", features = ["sync"] }
anyhow = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
