[package]
name = "osoosi-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Threat Detection Policy Engine for OpenỌ̀ṣọ́ọ̀sì Agentic EDR"

[dependencies]
otx_taxii = { package = "otx-taxii-rs", path = "../otx-taxii-rs" }
osoosi-types = { path = "../osoosi-types" }
osoosi-telemetry = { path = "../osoosi-telemetry" }
osoosi-memory = { path = "../osoosi-memory" }
osoosi-behavioral = { path = "../osoosi-behavioral" }
osoosi-audit = { path = "../osoosi-audit" }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
rusqlite = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
yara-x = { workspace = true }
process-memory = { workspace = true }
rand.workspace = true
base64 = "0.22"
