[package]
name = "osoosi-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Active Response Runtime (Deception & Tarpit) for OpenỌ̀ṣọ́ọ̀sì Agentic EDR"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-telemetry = { path = "../osoosi-telemetry" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sysinfo = { workspace = true }
tfhe = { workspace = true }
bincode = { workspace = true }
