[package]
name = "osoosi-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sysmon and File System Telemetry for OpenỌ̀ṣọ́ọ̀sì Agentic EDR"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-memory = { path = "../osoosi-memory" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
quick-xml = { workspace = true }
hostname = { workspace = true }
sysinfo = { workspace = true }
dashmap = { workspace = true }
