[package]
name = "osoosi-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Decentralized Trust and Certificate Management for OpenỌ̀ṣọ́ọ̀sì"

[dependencies]
osoosi-types = { path = "../osoosi-types" }
osoosi-audit = { path = "../osoosi-audit" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }
uuid = { workspace = true }
