[package]
name = "otx-taxii-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "otx_taxii"
path = "src/lib.rs"

[[bin]]
name = "otx-taxii-rs"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
rusqlite = { workspace = true }
